npc impl port